--- a/stilmallindex.css
+++ b/stilmallindex.css
@@ -1,15 +1,20 @@
-body {
-        background-color: lightgray
-        
 
+
+html, body {
+        background-color: lightgray;
+        margin: 0px;
 }
-
-header{
+body{
     background-color: 
-
 }
+
 header{
-     margin: 30px;
+    background-color: white;
+    margin: 50px;
+    padding: 10px;   
+    width: 100%;
+    min-height: 50px;
+    
 }
 
 
@@ -24,6 +29,20 @@ img {
     width: 40%;
 }
 
-body{
-    list-style: none
+nav a {
+    display:block;
+    margin: 10px;
+    border: 1px solid black;
+    background-color: white;
+    padding: 8px 8px;
+    width: 10%;
+    border-radius: 10px;
+
+}
+
+
+
+main{
+    object-position: center;
+     
 }
