--- a/stilmallindex.css
+++ b/stilmallindex.css
@@ -10,11 +10,11 @@ body{
 
 header{
     background-color: white;
-    margin: 50px;
-    padding: 10px;   
+    margin: 0px;
+    padding: 8px;   
     width: 100%;
     min-height: 50px;
-    
+
 }
 
 
@@ -37,7 +37,7 @@ nav a {
     padding: 8px 8px;
     width: 10%;
     border-radius: 10px;
-
+    box-shadow: 3px 3px black;
 }
 
 
