--- a/stilmallindex.css
+++ b/stilmallindex.css
@@ -13,7 +13,7 @@ header{
     margin: 0px;
     padding: 8px;   
     width: 100%;
-    min-height: 50px;
+    height: 55px;
 
 }
 
@@ -45,4 +45,10 @@ nav a {
 main{
     object-position: center;
      
+}
+
+
+header{
+    text-align: left;
+    margin-bottom: 50px;
 }
