--- a/endgame.css
+++ b/endgame.css
@@ -7,7 +7,7 @@ main{
 footer{
     position: fixed;
     bottom:0;
-    text-decoration-line: none
+    text-decoration-line: none;
     padding-bottom: 20px;
 }
 
